# SucklessTools

./: .gitmodules  Makefile  README.md  patch.sh
config/: autostart.sh  update_background
desktop/browser/: Makefile  main.cpp
desktop/browser/html/: Document.hpp  domnode.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
desktop/dmenu/: dmenu.c
desktop/dwm/: config.def.h  dwm.c
desktop/emails/: CMakeLists.txt  email.cpp  email.hpp  email_list.cpp  email_list.hpp  email_viewer.cpp  email_viewer.hpp  emails.cpp  emails.h  imap.cpp  imap.hpp  main.cpp  window.cpp  window.hpp
desktop/emails/imap/: imapclient.cpp  imapclient.hpp  imapcontent.cpp  imapcontent.hpp  imapparser.cpp  imapparser.hpp
desktop/open/: CMakeLists.txt  item.hpp  main.cpp  output.hpp  xlib.cpp  xlib.hpp
desktop/slstatus/: Makefile  config.def.h
desktop/st/: config.def.h  x.c
desktop/terminal/: CMakeLists.txt  Cargo.toml  Makefile  attribute.cpp  attribute.hpp  buffer.cpp  buffer.hpp  build.rs  color.cpp  color.hpp  config.hpp  cursor.hpp  decoder.cpp  decoder.hpp  escapes.cpp  escapes.hpp  line.cpp  line.hpp  log.txt  main.cpp  nano.save  terminal  terminal.cpp  terminal.hpp  test.py
desktop/terminal/output/: output.cpp  output.hpp  row.hpp  useless.cpp  useless.hpp  xclipboard.cpp  xclipboard.hpp  xlib.cpp  xlib.hpp
desktop/terminal/src/: buffer.rs  decoder.rs  main.rs  terminal.rs
desktop/terminal/src/buffer/: cursor.rs  draw_action.rs  mod.rs  rune.rs
desktop/terminal/src/decoder/: action.rs  mod.rs
desktop/terminal/src/display/: cursor.rs  mod.rs  raylib.rs  rune.rs  xlib_display.rs
desktop/terminal/src/display/xlib/: font.rs  mod.rs  screen.rs  window.rs
desktop/terminal2/: .swp  Cargo.toml  log.txt  test.txt  typescript
desktop/terminal2/src/: buffer.rs  decoder.rs  main.rs  terminal.rs
desktop/terminal2/src/display/: buffer.rs  cursor.rs  mod.rs  output.rs  rune.rs  xlib_display.rs
dmenu/: config.def.h  dmenu  stest  test
dwm/: config.def.h  config.h  drw.h  dwm
dwm-bar/: dwm_bar.sh
dwm-bar/bar-functions/: dwm_date.sh
emoji/: emoji.sh  emoji.txt
pamixer/: Makefile  pamixer
patches/: feh.patch  xclip.patch
slstatus/: config.def.h
st/: x.c
utils/bookmark/: .clang-format  Makefile  bm  bookmark  bookmark.cpp
utils/cc/: CMakeLists.txt  datatype.c  datatype.h  dumpast.c  dumpast.h  expression.c  expression.h  lexer.c  lexer.h  macro_condition.c  macro_condition.h  main.c  parser.c  parser.h  preproccessor.c  preproccessor.h  source_map.c  stream.c  stream.h  symbol.c  symbol.h  unit.c  unit.h  x86.c  x86.h  x86_asm.c  x86_asm.h  x86_expression.c  x86_expression.h
utils/cc/lexer/: lexer.c  lexer.h
utils/cc/parser/: datatype.c  datatype.h  expression.c  expression.h  parser.c  parser.h  symbol.h  unit.c  unit.h
utils/cc/preprocessor/: buffer.h  macro_condition.c  macro_condition.h  preprocessor.c  preprocessor.h  source_map.h
utils/cc/tests/: run.py
utils/cc/tests/basic_errors/: program.c  run.py
utils/cc/tests/basic_functions/: program.c
utils/cc/tests/basic_locals/: program.c  program_error.c  run.py
utils/cc/tests/basic_macros/: expected  program.c  run.py
utils/cc/tests/basic_operations/: program.c
utils/cc/tests/basic_return/: program.c  run.py
utils/cc/tests/basic_types/: expected  program.c
utils/cc/tests/primitives/: expected  program.c
utils/cc/tests/printf/: program.c  run.py
utils/cc/x86/: x86.c  x86.h  x86_asm.c  x86_asm.h  x86_expression.c  x86_expression.h
utils/crond/: .gitignore  Cargo.toml  Makefile  cron  cron.cpp  cron.hpp  main.cpp  timer.cpp  timer.hpp
utils/crond/crons/background/: config.json  update_background.py
utils/crond/crons/scripts/: update_background.py
utils/crond/src/: job_runner.rs  main.rs
utils/crond/src/job/: mod.rs  timer.rs
utils/crond/web/: log.html  log_entry.html  style.css
utils/database/: CMakeLists.txt  Makefile  chunk.cpp  chunk.hpp  cleaner.cpp  cleaner.hpp  column.cpp  column.hpp  config.hpp  database.cpp  database.hpp  database.kdev4  dynamicdata.cpp  dynamicdata.hpp  entry.cpp  entry.hpp  forward.hpp  main.cpp  prompt.cpp  prompt.hpp  row.cpp  row.hpp  table.cpp  table.hpp
utils/database/sql/: createtable.cpp  createtable.hpp  createtableifnotexists.cpp  createtableifnotexists.hpp  delete.cpp  delete.hpp  insert.cpp  insert.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  select.cpp  select.hpp  sql.hpp  statement.hpp  update.cpp  update.hpp  value.cpp  value.hpp
utils/debtorsbook/: CMakeLists.txt  main.cpp
utils/docgen/: .gitignore  CMakeLists.txt  lexer.cpp  lexer.hpp  main.cpp
utils/docgen/langs/: cplusplus.cpp  cplusplus.hpp  cpp.json
utils/docgen/structure/: codeunit.hpp  datatype.hpp  function.hpp  namespace.hpp
utils/docgen/syntax/: cpp.json
utils/libconfig/: CMakeLists.txt  libconfig.hpp
utils/libjson/: Makefile  allocator.cpp  allocator.hpp  allocatorcustom.cpp  allocatorcustom.hpp  forward.hpp  lexer.tinylex  libjson.cpp  libjson.hpp  main.cpp  test.cpp
utils/libprofile/: CMakeLists.txt  profile.cpp  profile.hpp
utils/shell/: .gitignore  CMakeLists.txt  Makefile  command.cpp  command.hpp  lexer.cpp  lexer.hpp  main.cpp  shell.cpp  shell.hpp
utils/shell/modules/: alias.cpp  alias.hpp  autocomplete.cpp  autocomplete.hpp  builtins.cpp  builtins.hpp  glob.cpp  glob.hpp  module.hpp
utils/shell/src/: main.rs  path.rs
utils/shell/src/interpreter/: assignment.rs  ast.rs  block.rs  command.rs  glob.rs  mod.rs  or.rs  resolve_args.rs  with.rs
utils/shell/src/interpreter/builtins/: alias.rs  dump.rs  jobs.rs  mod.rs  source.rs
utils/shell/src/line/: history.rs  mod.rs
utils/shell/src/parser/: lexer.rs  mod.rs  token.rs
utils/shell2/: Cargo.toml
utils/shell2/src/: line.rs  main.rs  path.rs
utils/shell2/src/interpreter/: and.rs  ast.rs  block.rs  command.rs  mod.rs  or.rs  pipe.rs  resolve_args.rs
utils/shell2/src/line/: autocomplete.rs  mod.rs
utils/webinterface/: Makefile  request.cpp  request.hpp  table.cpp  table.hpp  template.cpp  template.hpp  test.cpp  webinterface.cpp  webinterface.hpp  webinterface.kdev4
(+8 files in other folders)
