[package]
name = "terminal"
version = "0.1.0"
authors = ["BenJilks <benjyjilks@gmail.com>"]
edition = "2018"
links = "xlib"
build = "build.rs"

[dependencies]
x11 = { version = "2.18.2", optional = true }
raylib = { version = "5.0.2", optional = true }
libc = "0.2"

[profile.release]
opt-level = 2
debug = false
debug-assertions = false
overflow-checks = false
rpath = false

[features]
default = ["raylib"]
x11 = ["dep:x11"]
raylib = ["dep:raylib"]
